// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders proper HTML 1`] = `

<span class="ais-highlight">
  con
  <em>
    ten
  </em>
  t
</span>

`;

exports[`should render an empty string if attribute is not highlighted 1`] = `

<span class="ais-highlight">
</span>

`;
